@@ -63,11 +63,15 @@ for f in $scriptlist; do
     interplist="$interplist $interp"
     case $interp in
     */perl)	perllist="$perllist $f" ;;
-    *)		[ "${f%.pm}" != "${f}" ] && perllist="$perllist $f" ;;
     esac
 done
 [ -n "$interplist" ] && { echo "$interplist" | tr '[:blank:]' \\n | sort -u ; }
 
+#
+# --- Find perl module files.
+for f in $filelist; do
+    [ -r $f -a "${f%.pm}" != "${f}" ] && perllist="$perllist $f"
+done
 
 #
 # --- Weak symbol versions (from glibc).
