@@ -20,7 +20,7 @@ Name: rpm
 %define version 4.0.4
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.16
+Release: 0.17
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -443,8 +443,8 @@ fi
 %rpmattr	%{__prefix}/lib/rpm/perl.prov
 
 # XXX remove executable bit to disable autogenerated perl requires for now.
-#%rpmattr	%{__prefix}/lib/rpm/perl.req
-%attr(0644, rpm, rpm) %{__prefix}/lib/rpm/perl.req
+%rpmattr	%{__prefix}/lib/rpm/perl.req
+#%attr(0644, rpm, rpm) %{__prefix}/lib/rpm/perl.req
 
 %rpmattr	%{__prefix}/lib/rpm/rpm[bt]
 %rpmattr	%{__prefix}/lib/rpm/rpmdiff
@@ -524,6 +524,7 @@ fi
 * Tue Jan 22 2002 Heff Johnson <jbj@redhat.com>
 - fix: query format qualifiers needed header.c merge.
 - ppc64 arch added (#58634,#58636).
+- turn on auto-generated perl requirements (#58519, #58536, #58537).
 
 * Mon Jan 21 2002 Jeff Johnson <jbj@redhat.com>
 - sync rpmdb and build with rpm-4.1, lots of splint annotations.
