@@ -29,6 +29,7 @@
 	- add :armor and :base64 query format qualifiers for binary signatures.
 	- fix: query format qualifiers needed header.c merge.
 	- ppc64 arch added (#58634,#58636).
+	- turn on auto-generated perl requirements (#58519, #58536, #58537).
 
 4.0.2 -> 4.0.3:
 	- update per-interpreter dependency scripts, add sql/tcl (#20295).
